--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-flask==2.3.3
-pandas==2.1.1
-numpy==1.24.3
-geopandas==0.13.2
-osmnx==1.6.0
-networkx==3.1
-scipy==1.11.2
-scikit-learn==1.3.0
-folium==0.14.0
-matplotlib==3.7.2
-tqdm==4.66.1
+Flask==2.3.3
+pandas==2.0.3
+openpyxl==3.1.2
 gunicorn==21.2.0
 Werkzeug==2.3.7
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+click==8.1.7
+itsdangerous==2.1.2
+et-xmlfile==1.1.0
