--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-Flask==2.3.3
-pandas==2.0.3
-openpyxl==3.1.2
-gunicorn==21.2.0
-Werkzeug==2.3.7
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-click==8.1.7
-itsdangerous==2.1.2
-et-xmlfile==1.1.0
+Flask==2.3.2
+pandas==1.5.3
+openpyxl==3.1.0
+gunicorn==20.1.0
+Werkzeug==2.3.6
+numpy==1.24.3
