--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
 Flask==2.3.2
 pandas==2.0.3
-openpyxl==3.1.2
-gunicorn==20.1.0
-Werkzeug==2.3.7
 numpy==1.24.4
+openpyxl==3.1.2
+geopandas==0.13.2
+scikit-learn==1.3.0
+scipy==1.11.1
+folium==0.14.0
+matplotlib==3.7.2
+tqdm==4.65.0
+networkx==3.1
+osmnx==1.4.0
+Werkzeug==2.3.7
+shapely==1.8.5
+gunicorn==20.1.0
